ckanext/rvr/assets/css/rvr.css
/* @font-face {        
    font-family: GothamBold;
    font-display: swap;
    src: url(/fonts/GothamBold.ttf),
         url(/fonts/route/GothamBold.otf); 
    }  */


    /* font converted using font-converter.net. thank you! */
    @font-face {
        font-family: "Montserrat-Regular";
        src: url("/fonts/Montserrat-Regular.eot"); /* IE9 Compat Modes */
        src: url("/fonts/Montserrat-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
          url("/fonts/Montserrat-Regular.otf") format("opentype"), /* Open Type Font */
          url("/fonts/Montserrat-Regular.svg") format("svg"), /* Legacy iOS */
          url("/fonts/Montserrat-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
          url("/fonts/Montserrat-Regular.woff") format("woff"), /* Modern Browsers */
          url("/fonts/Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
        font-weight: normal;
        font-style: normal;
      }

      @font-face {
        font-family: "Montserrat-Bold";
        src: url("/fonts/Montserrat-Bold.eot"); /* IE9 Compat Modes */
        src: url("/fonts/Montserrat-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
          url("/fonts/Montserrat-Bold.otf") format("opentype"), /* Open Type Font */
          url("/fonts/Montserrat-Bold.svg") format("svg"), /* Legacy iOS */
          url("/fonts/Montserrat-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
          url("/fonts/Montserrat-Bold.woff") format("woff"), /* Modern Browsers */
          url("/fonts/Montserrat-Bold.woff2") format("woff2"); /* Modern Browsers */
        font-weight: normal;
        font-style: normal;
      }

a, p{
    font-family: "Montserrat-Regular" !important;
    font-size: 16px;
}
h1,h2,h3,h4{
    font-family: "Montserrat-Bold" !important;
}
.media-item {
    position: relative;
    float: left;
    padding: 15px;
    width: 226px;
    margin: 0 0 30px 30px;
    background-color: white;
    border-radius: 3px;
}

.collapse-arrow {
    float: right;
    transition: transform 0.3s ease;
}

.collapsed-arrow {
    float: right;
    transform: rotate(182deg);
    transition: transform 0.3s ease;
}
    
ul.dataset-list.list-unstyled li.dataset-item div.dataset-content div{
    font-family: "Montserrat-Regular" !important;
    font-size:16px;
   }

div.flash-messages,
div.field input#field-sitewide-search.form-control,
form#group-search-form.search-form.no-bottom-border div.form-select.form-group.control-order-by,
div.row.wrapper div.primary.col-sm-9.col-xs-12 article.module div.module-content ul.media-grid li.media-item span.count,
div.row.wrapper div.primary.col-sm-9.col-xs-12 section.module div.module-content small,
section.additional-info table.table.table-striped.table-bordered.table-condensed tbody tr td.dataset-details,
section.module div.module-content table.table.table-striped.table-bordered.table-condensed.table-toggle-more,[data-module="table-toggle-more"]{
    font-family: "Montserrat-Regular" !important;
    font-size:14px;
}

.multi-arrow::before { 
	content: '';
    width: 18px;
    cursor: pointer;
    height: 100%;
    position: absolute;
	z-index:1;
    top: 0px;
    right: 0px;
	background: #ccc;
	border: 1px solid #aaa;
    border-radius: 0 4px 4px 0;
    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ccc), color-stop(0.6, #eee));
    background-image: -webkit-linear-gradient(center bottom, #ccc 0%, #eee 60%);
    background-image: -moz-linear-gradient(center bottom, #ccc 0%, #eee 60%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#eeeeee', endColorstr = '#cccccc', GradientType = 0);
    background-image: linear-gradient(to top, #ccc 0%, #eee 60%);
}

.multi-arrow::after {
    content: '';
    z-index:1;
	border-left: 3.6px solid transparent;
	border-right: 3.6px solid transparent;
	border-top: 6px solid #888;
    position: absolute;
    top: calc(145% - 100%);
    right: 5px;
}


div#content.container div.row.wrapper{
    -webkit-box-shadow:none;
box-shadow:none;
}
    .account-masthead{
     background-color: #00847d;
    }
/*####################################### Header Bereich Start ###################################################*/
.navbar.navbar-static-top.masthead a {
    color: #00847d!important;
    font-size: 17px;
}


.masthead .navigation .nav-pills li a:hover,
.masthead .navigation .nav-pills li.active a{
    background-color: #00847d;
    color: white !important;
}


.navbar{
    background-color: white !important;
}

.masthead{
    background:none;
}
.masthead .navbar-collapse {
    float: none;
}

.header .header__logo {
    display: flex;
    /* display:-webkit-flex; */
    align-items: center;
}
.header-image.navbar-left img {
    max-width: 100%;
    height: auto;
    width:195px;
}

.navbar-toggle , .navbar-toggle.collapsed{
    color: #00847d;
}

@media (max-width:1201px) and (min-width:1200px){
    div#main-navigation-toggle.collapse.navbar-collapse{
        width: 82%;
    }

}

/* @media (max-width: 1060px) { */
    @media (max-width: 991px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
        float: none;
    }

    .collapse.in{
          display:flex !important;
          flex-flow: column;
    }
    
    .container-fluid{
       margin-left: unset;
    }
}

@media (min-width: 992px) and (max-width:1030px) {
    div.field input#field-sitewide-search.form-control{
        width:136px !important;
    }
    .container-fluid{
        padding-right: unset;
     }
}
/* ... */

